<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="8dp">

    <View
        android:id="@+id/colorPreview"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:contentDescription="@string/color_preview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:labelFor="@id/redSeekBar"
        android:text="@string/red"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/redSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@id/greenSeekBar"
        android:text="@string/green"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/greenSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@id/blueSeekBar"
        android:text="@string/blue"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/blueSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
